--- a/index.html
+++ b/index.html
@@ -5,7 +5,32 @@
         <title>Run Buddy</title>
     </head>
     <body>
-        <h1>Run Buddy</h1>
-        What We Do What You Do Your Trainers Reach Out
+        <! --navigation -->
+        <header>
+            <h1>Run Buddy</h1>
+        </header>
+
+        <!-- hero/jumbotron-->
+        <setion>
+        </setion>
+        <!-- "what we do" section -->
+        <section>
+            <h2>What We Do</h2>
+        </section>
+
+        <!-- "what you do" section -->
+        <section>
+            <h2>What You Do</h2>
+        </section>
+
+        <!-- "meet the trainers"-->
+        <section>
+            <h2>Meet The Trainers</h2>
+        </section>
+
+        <!-- footer -->
+        <footer>
+            <h2>❤️ Made with love by Run Buddy.</h2>
+        </footer>
     </body>
 </html>
